project/test/semantics/unit/good/input/Good30_shouldEvaluateSimpleGenericTypes.ty
immutable class Container[A] {
    
    values: {
        element: A;
    }
}

singleton class GenericTypes {
    
    actions: {
        main: () -> Void = Pass
    }
}
